deployments/nginx/route-nginx.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: nginx
spec:
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 8080
