deployments/nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: nginx
spec:
#  host: "nginx.apps.microshift.lab"
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
